--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.6.0",
-    "colors": "^1.1.2"
+    "colors": "^1.1.2",
+    "json5": "^1.0.1"
   }
 }
